--- a/XO.EventSpike/XO.Local.Spike.ReadModel/XO.Local.Spike.ReadModel.csproj
+++ b/XO.EventSpike/XO.Local.Spike.ReadModel/XO.Local.Spike.ReadModel.csproj
@@ -54,18 +54,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMongoDatabase.cs" />
-    <Compile Include="IMongoDB.cs" />
-    <Compile Include="IMongoRepository.cs" />
-    <Compile Include="IReadModel.cs" />
     <Compile Include="ReadModelRegistry.cs" />
-    <Compile Include="Model\LastProcessedPosition.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\UserLogins.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XO.Local.Spike.Infrastructure\XO.Local.Spike.Infrastructure.csproj">
+      <Project>{27947362-DE46-4F37-8D79-F22A6DB2DFA5}</Project>
+      <Name>XO.Local.Spike.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
