--- a/XO.EventSpike/XO.Local.Spike.Infrastructure/XO.Local.Spike.Infrastructure.csproj
+++ b/XO.EventSpike/XO.Local.Spike.Infrastructure/XO.Local.Spike.Infrastructure.csproj
@@ -33,6 +33,12 @@
     <Reference Include="EventStore.ClientAPI">
       <HintPath>..\packages\EventStore.Client.2.0.2\lib\net40\EventStore.ClientAPI.dll</HintPath>
     </Reference>
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -44,6 +50,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.5.23.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Tpl.Dataflow.4.5.23\lib\portable-net45+win8+wpa81\System.Threading.Tasks.Dataflow.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,23 +61,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateBase.cs" />
-    <Compile Include="Exceptions\AggregateDeletedException.cs" />
-    <Compile Include="Exceptions\AggregateNotFoundException.cs" />
-    <Compile Include="Exceptions\AggregateVersionException.cs" />
-    <Compile Include="ConflictDetector.cs" />
-    <Compile Include="ConventionEventRouter.cs" />
-    <Compile Include="Exceptions\HandlerForDomainEventNotFoundException.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="GetEventStoreRepository.cs" />
-    <Compile Include="IGESConnection.cs" />
+    <Compile Include="GES\AggregateBase.cs" />
+    <Compile Include="GES\ConflictDetector.cs" />
+    <Compile Include="GES\ConventionEventRouter.cs" />
+    <Compile Include="DispatcherBase.cs" />
+    <Compile Include="GES\Exceptions\AggregateDeletedException.cs" />
+    <Compile Include="GES\Exceptions\AggregateNotFoundException.cs" />
+    <Compile Include="GES\Exceptions\AggregateVersionException.cs" />
+    <Compile Include="GES\Exceptions\HandlerForDomainEventNotFoundException.cs" />
+    <Compile Include="GES\ExtensionMethods.cs" />
+    <Compile Include="GES\GetEventStoreRepository.cs" />
+    <Compile Include="HandlerBase.cs" />
+    <Compile Include="GES\Interfaces\IGESConnection.cs" />
+    <Compile Include="MessageBinderBase.cs" />
+    <Compile Include="SharedModels\IGESEvent.cs" />
+    <Compile Include="GES\Interfaces\IGetEventStoreRepository.cs" />
+    <Compile Include="IHandler.cs" />
+    <Compile Include="Mongo\IMongoDatabase.cs" />
+    <Compile Include="Mongo\IMongoDB.cs" />
+    <Compile Include="Mongo\IMongoRepository.cs" />
     <Compile Include="InfrastructureRegistry.cs" />
-    <Compile Include="Interfaces\IAggregate.cs" />
-    <Compile Include="Interfaces\IDetectConflicts.cs" />
-    <Compile Include="Interfaces\IRouteEvents.cs" />
-    <Compile Include="IGetEventStoreRepository.cs" />
+    <Compile Include="GES\Interfaces\IAggregate.cs" />
+    <Compile Include="GES\Interfaces\IDetectConflicts.cs" />
+    <Compile Include="GES\Interfaces\IRouteEvents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrationEventRouter.cs" />
+    <Compile Include="GES\RegistrationEventRouter.cs" />
+    <Compile Include="SharedModels\IReadModel.cs" />
+    <Compile Include="SharedModels\LastProcessedPosition.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
