--- a/XO.EventSpike/XO.EventSpike.WorkflowConsoleApp/XO.EventSpike.WorkflowConsoleApp.csproj
+++ b/XO.EventSpike/XO.EventSpike.WorkflowConsoleApp/XO.EventSpike.WorkflowConsoleApp.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{96828673-36C2-4256-A029-3426C21A9FFE}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{530FBECF-1EB0-4E93-9CC6-071A1884E49B}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XO.Local.Spike.MessageBinders</RootNamespace>
-    <AssemblyName>XO.Local.Spike.MessageBinders</AssemblyName>
+    <RootNamespace>XO.EventSpike.WorkflowConsoleApp</RootNamespace>
+    <AssemblyName>XO.EventSpike.WorkflowConsoleApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,19 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EventStore.ClientAPI, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\EventStore.Client.3.0.0\lib\net40\EventStore.ClientAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.5\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="StructureMap">
-      <HintPath>..\packages\structuremap.3.1.1.134\lib\net40\StructureMap.dll</HintPath>
+      <HintPath>..\..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap.Net4">
-      <HintPath>..\packages\structuremap.3.1.1.134\lib\net40\StructureMap.Net4.dll</HintPath>
+      <HintPath>..\..\packages\structuremap.3.1.2.138\lib\net40\StructureMap.Net4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -53,27 +47,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MessageBinderRegistry.cs" />
-    <Compile Include="MessageBinders\LoginUserMessageBinder.cs" />
+    <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MessageBinders\RegisterUserMessageBinder.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\XO.Local.Spike.Infrastructure\XO.Local.Spike.Infrastructure.csproj">
-      <Project>{27947362-DE46-4F37-8D79-F22A6DB2DFA5}</Project>
+      <Project>{27947362-de46-4f37-8d79-f22a6db2dfa5}</Project>
       <Name>XO.Local.Spike.Infrastructure</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XO.Local.Spike.Messages\XO.Local.Spike.Messages.csproj">
-      <Project>{62C7845F-EF4D-4F0B-A6ED-4D28232EA1B2}</Project>
-      <Name>XO.Local.Spike.Messages</Name>
+    <ProjectReference Include="..\XO.Local.Spike.Workflows\XO.Local.Spike.Workflows.csproj">
+      <Project>{7bc6eba1-7dc1-4142-ad5e-9c99cce7c97c}</Project>
+      <Name>XO.Local.Spike.Workflows</Name>
     </ProjectReference>
-    <ProjectReference Include="..\XO.Local.Spike.ReadModel\XO.Local.Spike.ReadModel.csproj">
-      <Project>{FE897AEE-44B0-4FE5-A2F0-AAFCEAEF2730}</Project>
-      <Name>XO.Local.Spike.ReadModel</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
